--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -6,18 +6,11 @@
 {% block content %}
 <div class="container">
   <div class="page-header">
-      <h1>Login</h1>
+      <h1>Register</h1>
   </div>
   <div class="col-md-4">
       {{ wtf.quick_form(form) }}
   </div>
-
-  <p>
-    New user?
-    <a href="{{ url_for('auth.register') }}">
-      Click here to register
-    </a>
-  </p>
 </div>
 
 {% endblock %}
