--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Farm Stand - Page Not Found{% endblock %}
+{% block title %}Farm Stand - Permission Denied{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Not Found</h1>
+    <h1>Permission Denied</h1>
 </div>
 {% endblock %}
