--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
                 {% if current_user.is_authenticated() %}
                 <li><a href="{{ url_for('main.user', username=current_user.username)}}">Profile</a></li>
+                <li><a href="{{ url_for('main.manage_product', id=current_user.id)}}">Manage Product</a></li>
                 {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
