--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,9 +6,52 @@
 {% block title %}Farm Stand{% endblock %}
 
 {% block content %}
-<div class="jumbotron">
+<div class="market-header">
   <div class="container">
     <div class="row">
+      <ul class="farmers">
+        <li class="col-md-2">Sara</li>
+        <li class="col-md-2">Sara</li>
+        <li class="col-md-2">Sara</li>
+        <li class="col-md-2">Sara</li>
+        <li class="col-md-2">Sara</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="crop-list">
+    <ul class="farm-items">
+      <li class="now-title">Now Available</li>
+
+      {% for food in foods %}
+        {% if food.available == True %}
+          <li class="available">{{food.name}}</li>
+        {% endif%}
+      {% endfor %}
+
+      <li class="coming-title">Coming soon</li>
+
+      {% for food in foods %}
+        {% if food.available == False %}
+          <li class="coming-soon">{{food.name}}</li>
+        {% endif%}
+      {% endfor %}
+    </ul>
+  </div>
+  <!-- <div>
+      <h1>personas interesadas</h1>
+      {% for interested in interestedpeople %}
+        {{interested.name}} - {{interested.phone}} <br>
+      {% endfor%}
+  </div> -->
+
+</div>
+
+<div class="fast-sign-up">
+  <div class="container">
+    <div class="sign-up-content">
       <!-- any error or form related message -->
       {% for message in get_flashed_messages() %}
       <div class="alert alert-warning">
@@ -28,33 +71,5 @@
     </div>
   </div>
 </div>
-
-<div class="container">
-  <ul class="farm-items">
-    <li class="now-title">Now Available</li>
-
-    {% for food in foods %}
-      {% if food.available == True %}
-        <li class="available">{{food.name}}</li>
-      {% endif%}
-    {% endfor %}
-
-    <li class="coming-title">Coming soon</li>
-
-    {% for food in foods %}
-      {% if food.available == False %}
-        <li class="coming-soon">{{food.name}}</li>
-      {% endif%}
-    {% endfor %}
-  </ul>
-  <div class="page-header">
-      <h1>personas interesadas</h1>
-      {% for interested in interestedpeople %}
-        {{interested.name}} - {{interested.phone}} <br>
-      {% endfor%}
-  </div>
-
-</div>
-
 
 {% endblock %}
