Revert "added some styles for login and register"
This reverts commit 6534d12f94a589553f4fc847ad6b2355fc270f3e.

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -4,12 +4,12 @@
 {% block title %}Farm Stand - Login{% endblock %}
 
 {% block content %}
-<div class="register">
-  <div class="container">
-    <div class="col-md-4">
-        <h1>Register</h1><hr>
-        {{ wtf.quick_form(form) }}
-    </div>
+<div class="container">
+  <div class="page-header">
+      <h1>Register</h1>
+  </div>
+  <div class="col-md-4">
+      {{ wtf.quick_form(form) }}
   </div>
 </div>
 
