--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,5 +1,5 @@
 /*header styles*/
-/*.market-header {
+.market-header {
   background-color: tomato;
   height: 200px;
 }
@@ -10,12 +10,12 @@
   height: 125px;
   margin: 10px 16px;
   background-color: green;
-}*/
+}
 /*end of header styles*/
 
 
 /*content styles*/
-/*.crop-list {
+.crop-list {
   width: 500px;
   margin: 0 auto;
   background-color: pink;
@@ -29,58 +29,10 @@
 .fast-sign-up .sign-up-content {
   width: 500px;
   margin: 0 auto;
-}*/
+}
 /*end of content styles*/
 
 
 /*footer styles*/
 
 /*end of footer styles*/
-
-/*media queries*/
-
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 568px)
-and (orientation : portrait) {
-  .login #submit {
-    background-color: green;
-    color: white;
-    font-size: 1.4em;
-    width: 100%;
-    height: 55px;
-    border-radius: 4px;
-  }
-
-  .login input {
-    height: 50px;
-  }
-
-  .radio label, .checkbox label {
-    line-height: 27px;
-  }
-
-  .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
-  }
-
-
-  .new-register {
-    padding: 18px;
-  }
-
-  .register #submit {
-    background-color: green;
-    color: white;
-    font-size: 1.4em;
-    width: 100%;
-    height: 55px;
-    border-radius: 4px;
-  }
-
-  .register input {
-    height: 50px;
-  }
-
-}
