added new styles and separate crop-list from add-product

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,20 +4,20 @@
 {% block title %}Farm Stand - Login{% endblock %}
 
 {% block content %}
-<div class="container">
-  <div class="page-header">
-      <h1>Login</h1>
-  </div>
-  <div class="col-md-4">
-      {{ wtf.quick_form(form) }}
-  </div>
+<div class="login">
+  <div class="container">
+    <div class="col-md-4">
+        <h1>Login</h1>
+        {{ wtf.quick_form(form) }}
+    </div>
 
-  <p>
-    New user?
-    <a href="{{ url_for('auth.register') }}">
-      Click here to register
-    </a>
-  </p>
+    <div class="new-register">
+      New user?
+      <a href="{{ url_for('auth.register') }}">
+        Click here to register
+      </a>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
