--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,38 +1,103 @@
 /*header styles*/
-.market-header {
-  background-color: tomato;
-  height: 200px;
+.navbar {
+  background-color: darkgray;
+  border-bottom: white solid 1px;
+  color: white;
 }
 
-.market-header .farmers li{
-  list-style-type: none;
-  display: inline;
-  height: 125px;
-  margin: 10px 16px;
-  background-color: green;
+.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav > li > a{
+  color: white;
 }
+
+.navbar-inverse .navbar-toggle {
+  border-color: silver;
+}
+
+.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
+  background-color: silver;
+}
+
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+  border-color: silver;
+}
+
 /*end of header styles*/
 
 
 /*content styles*/
-.crop-list {
-  width: 500px;
-  margin: 0 auto;
-  background-color: pink;
-}
 
-.fast-sign-up {
-  background-color: lightgray;
-  height: 200px;
-}
-
-.fast-sign-up .sign-up-content {
-  width: 500px;
-  margin: 0 auto;
-}
 /*end of content styles*/
 
 
 /*footer styles*/
 
 /*end of footer styles*/
+
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px)
+and (orientation : portrait) {
+  .login #submit {
+    background-color: green;
+    color: white;
+    font-size: 1.4em;
+    width: 100%;
+    height: 55px;
+    border-radius: 4px;
+  }
+
+  .login input {
+    height: 50px;
+  }
+
+  .radio label, .checkbox label {
+    line-height: 27px;
+    padding-left: 5px;
+  }
+
+  .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+  }
+
+
+  .new-register {
+    padding: 18px;
+  }
+
+  .register #submit, .add-product #submit {
+    background-color: green;
+    color: white;
+    font-size: 1.4em;
+    width: 100%;
+    height: 55px;
+    border-radius: 4px;
+  }
+
+  .register input, .add-product input {
+    height: 50px;
+  }
+
+  .crop-list ul{
+    padding: 0px;
+  }
+
+  .crop-list li{
+    list-style-type: none;
+    height: 35px;
+    border-bottom: 1px solid #f6f6f6;
+    margin-bottom: 15px;
+  }
+
+  .crop-list .glyphicon-plus{
+    background-color: limegreen;
+    color: white;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    padding-top: 7px;
+    padding-left: 2px;
+    border-radius: 50px;
+    font-size: 0.8em;
+  }
+}
