--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -1,15 +1,19 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Farm Stand - Login{% endblock %}
+{% block title %}Farm Stand - Edit Profile{% endblock %}
 
 {% block content %}
-<div class="register">
+
+<div class="add-product">
   <div class="container">
-    <div class="col-md-4">
-        <h1>Register</h1>
+
+      {% if current_user %}
+        <h3>add product</h3>
         {{ wtf.quick_form(form) }}
-    </div>
+
+      {% endif %}
+    
   </div>
 </div>
 
