--- a/app/templates/crop_list.html
+++ b/app/templates/crop_list.html
@@ -11,36 +11,48 @@
         <div class="header">
           <h2>Crop List <a href="{{ url_for('.add_product', id=current_user.id) }}"><span class="glyphicon glyphicon-plus pull-right" aria-hidden="true"></span></a></h2>
         </div><hr>
-        <ul class="products" style="width: 300px;">
-          <h4>Available Now</h4><hr>
-          {% for product in products %}
-            {% if product.available == True %}
-              <li class="available">
-                {{product.name}}
-                {% if product.available %}
-                  <a href="{{ url_for('.update_unavailable', id=product.id) }}">available</a>
-                {% else %}
-                  <a href="{{ url_for('.update_available', id=product.id) }}">unavailable</a>
-                {% endif %}
-                <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
-              </li>
-            {% endif%}
-          {% endfor %}
+        <ul class="products">
+          <div class="available-now">
+            <h3>Available Now</h3><hr>
+            {% for product in products %}
+              {% if product.available == True %}
+                <li>
+                  <span class="title">{{product.name}}</span>
+                  <span class="price">${{ product.price }}</span>
 
-          <h4>Coming Soon</h4><hr>
-          {% for product in products %}
-            {% if product.available == False %}
-              <li class="available">
-                {{product.name}}
-                {% if product.available %}
-                  <a href="{{ url_for('.update_unavailable', id=product.id) }}">available</a>
-                {% else %}
-                  <a href="{{ url_for('.update_available', id=product.id) }}">unavailable</a>
-                {% endif %}
-                <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
-              </li>
-            {% endif%}
-          {% endfor %}
+                  <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                  <span class="available-btn pull-right">
+                    {% if product.available %}
+                    <a href="{{ url_for('.update_unavailable', id=product.id) }}">available</a>
+                    {% else %}
+                      <a href="{{ url_for('.update_available', id=product.id) }}">unavailable</a>
+                    {% endif %}
+                  </span>
+                </li>
+              {% endif%}
+            {% endfor %}
+          </div>
+
+          <div class="coming-soon">
+            <h3>Coming Soon</h3><hr>
+            {% for product in products %}
+              {% if product.available == False %}
+                <li>
+                  <span class="title">{{product.name}}</span>
+                  <span class="price">${{ product.price }}</span>
+
+                  <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                  <span class="available-btn pull-right">
+                    {% if product.available %}
+                      <span class="available-buttom"><a href="{{ url_for('.update_unavailable', id=product.id) }}">available</a></span>
+                    {% else %}
+                      <a href="{{ url_for('.update_available', id=product.id) }}">unavailable</a>
+                    {% endif %}
+                  </span>
+                </li>
+              {% endif%}
+            {% endfor %}
+          </div>
 
         </ul>
       {% endif %}
