--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -3,17 +3,28 @@
 
 {% block title %}Farm Stand - Edit Profile{% endblock %}
 
+{% block head %}
+{{ super() }}
+  <style media="screen">
+    body {
+      background-color: #f5f5f5;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
 
 <div class="add-product">
   <div class="container">
+    <div class="box">
+      <div class="add-product-box">
+        {% if current_user %}
+          <h3>add product</h3>
+          {{ wtf.quick_form(form) }}
 
-      {% if current_user %}
-        <h3>add product</h3>
-        {{ wtf.quick_form(form) }}
-
-      {% endif %}
-    
+        {% endif %}
+      </div>
+    </div>
   </div>
 </div>
 
