--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,19 +3,29 @@
 
 {% block title %}Farm Stand - Login{% endblock %}
 
+{% block head %}
+{{ super() }}
+  <style media="screen">
+    body {
+      background-color: #f5f5f5;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
 <div class="login">
   <div class="container">
-    <div class="col-md-4">
-        <h1>Login</h1>
-        {{ wtf.quick_form(form) }}
-    </div>
-
-    <div class="new-register">
-      New user?
-      <a href="{{ url_for('auth.register') }}">
-        Click here to register
-      </a>
+    <div class="box">
+      <div class="login-box">
+          <h1>Login</h1>
+          {{ wtf.quick_form(form) }}
+      </div>
+      <div class="new-register">
+        New user?
+        <a href="{{ url_for('auth.register') }}">
+          Click here to register
+        </a>
+      </div>
     </div>
   </div>
 </div>
