--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -3,12 +3,23 @@
 
 {% block title %}Farm Stand - Login{% endblock %}
 
+{% block head %}
+{{ super() }}
+  <style media="screen">
+    body {
+      background-color: #f5f5f5;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
 <div class="register">
   <div class="container">
-    <div class="col-md-4">
-        <h1>Register</h1>
-        {{ wtf.quick_form(form) }}
+    <div class="box">
+        <div class="register-box">
+          <h1>Register</h1>
+          {{ wtf.quick_form(form) }}
+        </div>
     </div>
   </div>
 </div>
