--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -3,14 +3,25 @@
 
 {% block title %}Farm Stand - Edit Profile{% endblock %}
 
+{% block head %}
+{{ super() }}
+  <style media="screen">
+    body {
+      background-color: #f5f5f5;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
 
-<div class="container">
-  <div class="page-header">
-      <h1>Edit Your Profile</h1>
-  </div>
-  <div class="col-md-4">
-      {{ wtf.quick_form(form) }}
+<div class="edit-profile">
+  <div class="container">
+    <div class="box">
+      <div class="edit-profile-box">
+          <h1>edit profile</h1>
+          {{ wtf.quick_form(form) }}
+      </div>
+    </div>
   </div>
 </div>
 
