--- a/app/templates/crop_list.html
+++ b/app/templates/crop_list.html
@@ -20,14 +20,15 @@
                   <span class="title">{{product.name}}</span>
                   <span class="price">${{ product.price }}</span>
 
-                  <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
-                  <span class="available-btn pull-right">
+                  <!-- <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> -->
+                  <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right" style="color: cornflowerblue;"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+                  <!-- <span class="available-btn pull-right">
                     {% if product.available %}
                     <a href="{{ url_for('.update_unavailable', id=product.id) }}">available</a>
                     {% else %}
                       <a href="{{ url_for('.update_available', id=product.id) }}">unavailable</a>
                     {% endif %}
-                  </span>
+                  </span> -->
                 </li>
               {% endif%}
             {% endfor %}
@@ -41,14 +42,15 @@
                   <span class="title">{{product.name}}</span>
                   <span class="price">${{ product.price }}</span>
 
-                  <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
-                  <span class="available-btn pull-right">
+                  <!-- <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> -->
+                  <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right" style="color: cornflowerblue;"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+                  <!-- <span class="available-btn pull-right">
                     {% if product.available %}
                       <span class="available-buttom"><a href="{{ url_for('.update_unavailable', id=product.id) }}">available</a></span>
                     {% else %}
                       <a href="{{ url_for('.update_available', id=product.id) }}">unavailable</a>
                     {% endif %}
-                  </span>
+                  </span> -->
                 </li>
               {% endif%}
             {% endfor %}
