--- a/app/templates/edit_product.html
+++ b/app/templates/edit_product.html
@@ -21,6 +21,7 @@
         {% if current_user %}
           <h3>add product</h3>
           {{ wtf.quick_form(form) }}
+          <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
         {% endif %}
       </div>
     </div>
