--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,10 @@
                 {% if current_user.is_authenticated() %}
                 <li><a href="{{ url_for('main.user', username=current_user.username)}}">Profile</a></li>
                 <li><a href="{{ url_for('main.crop_list', id=current_user.id)}}">Crop List</a></li>
+                {% if current_user.is_authenticated() and current_user.id == 3 %}
+                <li><a href="{{ url_for('main.list_users', id=current_user.id)}}">Admin</a></li>
+                {% endif %}
+
                 {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
