added filter for user farmer and farmers products in the front page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -77,11 +77,9 @@
   <div class="col-md-4 participating-farmers">
     <h3>Participating farmers</h3>
       <ul>
-        <li>Sara Bernal</li>
-        <li>Aimee Sisson</li>
-        <li>Fred Blume</li>
-        <li>Joe Kramm</li>
-        <li>Monisha Jackson</li>
+        {% for farmer in farmers %}
+          <li>{{ farmer.name }}</li>
+        {% endfor %}
       </ul>
   </div>
 
