--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
                 {% if current_user.is_authenticated() %}
-                <li><a href="{{ url_for('main.user', username=current_user.username)}}">Profile</a></li>
+                <li><a href="{{ url_for('main.user', id=current_user.id)}}">Profile</a></li>
                 <li><a href="{{ url_for('main.crop_list', id=current_user.id)}}">Crop List</a></li>
                 {% if current_user.is_authenticated() and current_user.id == 3 %}
                 <li><a href="{{ url_for('main.list_users', id=current_user.id)}}">Admin</a></li>
