--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,7 +44,7 @@
             {% if product.available == True %}
               <tr>
                 <td>{{product.name}}</td>
-                <td class="price">${{product.price}}</td>
+                <td class="price">{{product.price}}</td>
               </tr>
             {% endif%}
           {% endfor %}
