deleted $ sign and add placeholder for price again

--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -25,7 +25,7 @@
 
             {{ wtf.form_field(form.name, placeholder="name") }}
             {{ wtf.form_field(form.available) }}
-            {{ wtf.form_field(form.price, placeholder="price" )}}
+            {{ wtf.form_field(form.price, placeholder="$ 2.00 / lb" )}}
             {{ wtf.form_field(form.starts, placeholder="from" )}}
             {{ wtf.form_field(form.ends, placeholder="ends" ) }}
             {{ wtf.form_field(form.submit)}}
