--- a/app/templates/crop_list.html
+++ b/app/templates/crop_list.html
@@ -18,7 +18,7 @@
               {% if product.available == True %}
                 <li>
                   <span class="title">{{product.name}}</span>
-                  <span class="price">${{ product.price }}</span>
+                  <span class="price">{{ product.price }}</span>
 
                   <!-- <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> -->
                   <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right" style="color: cornflowerblue;"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
