added code for change password feauture

--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Farm Stand - Edit Profile{% endblock %}
+{% block title %}Farm Stand - Login{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -13,13 +13,11 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="edit-profile">
+<div class="login">
   <div class="container">
     <div class="box">
-      <div class="edit-profile-box">
-          <h1>edit profile</h1>
-          <!-- <a href="{{ url_for('auth.changepassword', id=current_user.id) }}">change password</a> -->
+      <div class="login-box">
+          <h1>Change Password</h1>
           {{ wtf.quick_form(form) }}
       </div>
     </div>
