added a profile and flash messages

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,15 @@
 </div><br><br>
 {% endblock %}
 
+{% block messages%}
+  {% for message in get_flashed_messages() %}
+  <div class="alert alert-warning">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      {{ message }}
+  </div>
+  {% endfor %}
+{% endblock %}
+
 {% block content %}
 
 {% endblock %}
