--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,14 +6,14 @@
 {% block title %}Farm Stand{% endblock %}
 
 {% block content %}
-
-<!-- any error or form related message -->
-{% for message in get_flashed_messages() %}
-<div class="alert alert-warning">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    {{ message }}
+<div class="container">
+  {% for message in get_flashed_messages() %}
+  <div class="alert alert-warning">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      {{ message }}
+  </div>
+  {% endfor %}
 </div>
-{% endfor %}
 
 <div class="header-info">
   <div class="container">
@@ -78,7 +78,7 @@
     <h3>Participating farmers</h3>
       <ul>
         {% for farmer in farmers %}
-          <li>{{ farmer.name }}</li>
+          <li><a href="{{ url_for('main.profile', id=farmer.id) }}">{{ farmer.name }}</a></li>
         {% endfor %}
       </ul>
   </div>
