changed available for status - RadioField instead of Boolean

--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -24,7 +24,7 @@
             {{ form.hidden_tag() }}
 
             {{ wtf.form_field(form.name, placeholder="name") }}
-            {{ wtf.form_field(form.available) }}
+            {{ wtf.form_field(form.status) }}
             {{ wtf.form_field(form.price, placeholder="$ 2.00 / lb" )}}
             {{ wtf.form_field(form.starts, placeholder="from" )}}
             {{ wtf.form_field(form.ends, placeholder="ends" ) }}
