--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -13,6 +13,14 @@
 {% endblock %}
 
 {% block content %}
+
+{% for message in get_flashed_messages() %}
+  <div class="alert alert-warning">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      {{ message }}
+  </div>
+{% endfor %}
+
 <div class="login">
   <div class="container">
     <div class="box">
