--- a/app/templates/crop_list.html
+++ b/app/templates/crop_list.html
@@ -15,20 +15,11 @@
           <div class="available-now">
             <h3>Available Now</h3><hr>
             {% for product in products %}
-              {% if product.available == True %}
+              {% if product.status == "1" %}
                 <li>
                   <span class="title">{{product.name}}</span>
                   <span class="price">{{ product.price }}</span>
-
-                  <!-- <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> -->
                   <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right" style="color: cornflowerblue;"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
-                  <!-- <span class="available-btn pull-right">
-                    {% if product.available %}
-                    <a href="{{ url_for('.update_unavailable', id=product.id) }}">available</a>
-                    {% else %}
-                      <a href="{{ url_for('.update_available', id=product.id) }}">unavailable</a>
-                    {% endif %}
-                  </span> -->
                 </li>
               {% endif%}
             {% endfor %}
@@ -37,20 +28,11 @@
           <div class="coming-soon">
             <h3>Coming Soon</h3><hr>
             {% for product in products %}
-              {% if product.available == False %}
+              {% if product.status == "2" %}
                 <li>
                   <span class="title">{{product.name}}</span>
-                  <span class="price">${{ product.price }}</span>
-
-                  <!-- <a href="{{ url_for('.delete_product', id=product.id) }}" class="pull-right" style="color: tomato;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> -->
+                  <span class="price">{{ product.price }}</span>
                   <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right" style="color: cornflowerblue;"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
-                  <!-- <span class="available-btn pull-right">
-                    {% if product.available %}
-                      <span class="available-buttom"><a href="{{ url_for('.update_unavailable', id=product.id) }}">available</a></span>
-                    {% else %}
-                      <a href="{{ url_for('.update_available', id=product.id) }}">unavailable</a>
-                    {% endif %}
-                  </span> -->
                 </li>
               {% endif%}
             {% endfor %}
