--- a/app/templates/edit_product.html
+++ b/app/templates/edit_product.html
@@ -24,7 +24,7 @@
             {{ form.hidden_tag() }}
 
             {{ wtf.form_field(form.name, placeholder=product.name) }}
-            {{ wtf.form_field(form.available, placeholde=product.available) }}
+            {{ wtf.form_field(form.status, placeholde=product.status) }}
             {{ wtf.form_field(form.price, placeholder=product.price )}}
             {{ wtf.form_field(form.starts, placeholder=product.starts )}}
             {{ wtf.form_field(form.ends, placeholder=product.ends ) }}
