--- a/app/templates/list_users.html
+++ b/app/templates/list_users.html
@@ -23,7 +23,7 @@
           <td>{{user.id}}</td>
           <td>{{user.name}}</td>
           <td>{{user.role.name}}</td>
-          <td><a href="{{ url_for('.edit_profile_admin', id=user.id) }}">edit</a></td>
+          <td><a href="{{ url_for('.edit_user', id=user.id) }}">edit</a></td>
         </tr>
         {% endfor %}
       </table>
