Commented out old stylesheet.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+<!--<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">-->
 <link rel="stylesheet" href="{{url_for('static', filename='css/admin.css')}}"><link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800' rel='stylesheet' type='text/css'>
 
 {% endblock %}
