--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,37 +1,28 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Farm Stand - Edit Profile{% endblock %}
+{% block title %}Edit Your Profile | Farm Stand{% endblock %}
 
 {% block head %}
 {{ super() }}
-  <style media="screen">
-    body {
-      background-color: #f5f5f5;
-    }
-  </style>
 {% endblock %}
 
 {% block content %}
 
-<div class="edit-profile">
-  <div class="container">
-    <div class="box">
-      <div class="edit-profile-box">
-          <h1>edit profile</h1>
-          <a href="{{ url_for('auth.changepassword', id=current_user.id) }}">change password</a>
+<div class="container">
+  <div class="page-header">
+    <h1>Edit Your Profile</h1>
+    <hr>
+    <form class="form" method="post" role="form">
+      {{ form.hidden_tag() }}
 
-          <form class="form" method="post" role="form">
-            {{ form.hidden_tag() }}
+      {{ wtf.form_field(form.farm_name, placeholder=current_user.farm_name) }}
+      {{ wtf.form_field(form.url, placeholder=current_user.url) }}
 
-            {{ wtf.form_field(form.farm_name, placeholder=current_user.farm_name) }}
-            {{ wtf.form_field(form.url, placeholder=current_user.url) }}
-
-            {{ wtf.form_field(form.submit)}}
-          </form>
-      </div>
-    </div>
+    </form>
   </div>
-</div>
+  
+  {{ wtf.form_field(form.submit)}}
 
+</div>
 {% endblock %}
